# landlords

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.uv  README.md  docker-compose-dev.yml  docker-compose-prod-watch.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  python-test.yml
backend/: Dockerfile.uv  game_controller.py  pyproject.toml  server.py
backend/agent/: agent.py  deep.py  models.py
backend/agent/utils/: move_detector.py  move_generator.py
backend/analytics/: gen_hand_distribution.py
backend/model/: game.py  hand.py  player.py
backend/tests/: conftest.py  test_agent.py  test_agent_moves.py  test_game.py  test_hand.py  test_hand_gen.py  test_reconnect.py  test_socket.py  test_user.py  utils.py
frontend/: Dockerfile  Dockerfile.dev  design.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: AlertMessage.jsx  App.jsx  BetComponent.jsx  Card.jsx  CardMoveButtons.jsx  CountdownTimer.jsx  GameLobby.jsx  Hand.jsx  Home.jsx  IndividualHand.jsx  Instructions.jsx  NotFound.jsx  OpponentHand.jsx  Round.jsx  RoundHistory.jsx  RoundInfo.jsx  Scoreboard.jsx  SpecialHandAnimation.jsx  TurnBanner.jsx  WaitingPage.jsx  index.js  test_sets.js
model/: game.py  hand.py  player.py
tests/: conftest.py  test_agent.py  test_concurrent_connections.py  test_game.py  test_hand.py  test_hand_gen.py  test_reconnect.py  test_socket.py  test_user.py  utils.py
