[project]
name = "landlords"
version = "0.1.0"
description = "Web application for playing dou dizhu online. Also, for experimenting with new technology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.6.2.post1",
    "asyncio>=3.4.3",
    "faker>=30.8.1",
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "numpy>=2.1.3",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "torch>=2.5.1",
    "uvicorn>=0.32.0",
    "websockets>=13.1",
]

[tool.pytest.ini_options]
pythonpath = ["./"]
asyncio_default_fixture_loop_scope = "gfunction"

[tool.ruff.lint]
ignore = ["F405", "F403"]
